# django-rq-cron

./: .gitignore  README.md  justfile  pyproject.toml  pytest.ini  setup.py
django_rq_cron/: __init__.py  admin.py  models.py  runner.py
django_rq_cron/migrations/: 0001_initial.py  0002_alter_cronjobstatustransition_options_and_more.py
django_rq_cron/tests/: conftest.py  test_registry.py  test_runner.py
sample_project/: .gitignore  README.md  manage.py  pyproject.toml
sample_project/banana_stand/: settings.py  urls.py  wsgi.py
sample_project/bananas/: admin.py  apps.py  models.py  test_crons.py  tests.py
sample_project/bananas/crons/: banana_aging.py
sample_project/bananas/management/commands/: create_sample_bananas.py
tests/: conftest.py
