[project]
name = "banana-stand"
version = "0.1.0"
description = "Sample Django application demonstrating django-rq-cron"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2,<5.0",
    "django-rq>=2.8.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "banana_stand.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.2.0",
]
